Update Firebase config in Management.html
Updated Firebase configuration with new project details.

--- a/Management.html
+++ b/Management.html
@@ -76,12 +76,12 @@
 
         // IMPORTANT: Use the SAME config as your office.html
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyCQHfM_2I1dxsFmfeKvqJqw-wrkIgypbX0",
+            authDomain: "veddagala-tea-factory.firebaseapp.com",
+            projectId: "veddagala-tea-factory",
+            storageBucket: "veddagala-tea-factory.firebasestorage.app",
+            messagingSenderId: "961219000630",
+            appId: "1:961219000630:web:b41785a86b5d47b1c6db97",
         };
 
         const app = initializeApp(firebaseConfig);
